Fix a layout bug, add favicon

--- a/source/style/id/time.scss
+++ b/source/style/id/time.scss
@@ -2,7 +2,8 @@
   a {
     display: inline-block;
     font-size: 2em;
-    padding: 0 1em 1em;
+    padding: 1em;
+    margin-top: -1em;
     margin-left: -1em;
   }
 }
